--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <header><h1>Bienvenido al sistema de gestión de Universidad</h1></header>
-    
+    <p>
+        <h3>Instrucciones para envio de versiones</h3>
+    </p>
     <p>Seleccione una opción:</p>
     <ul>
         <li><a href="gest_facultad/index.php">Gestionar facultades</a></li>
