Crud borrador Daniel Jay Salones

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="gest_facultad/index.php">Gestionar facultades</a></li>
         <li><a href="gest_docente/index.php">Gestionar docentes</a></li>
-        <li><a href="gest_salon/index.php">Gestionar salones</a></li>
+        <li><a href="gest_salon/index.html">Gestionar salones</a></li>
         <li><a href="gest_asignatura/index.php">Gestionar asignatura</a></li>
         <li><a href="gest_programa/index.php">Gestionar programa académico</a></li>
     </ul>
