--- a/gest_salon/index.html
+++ b/gest_salon/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taller 1 unidad 2</title>
+    <title>Taller 1 unidad 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body class="bg-light">
     <div class="container mt-5">
@@ -16,6 +17,7 @@
                     <p>Ingrese el método a realizar</p>
                     <ol>
                         <li>Agregar Salon</li>
+                        <li>Consultar salon</li>
                         <li>Editar Salon</li>
                         <li>Eliminar Salon</li>
                     </ol>
@@ -44,7 +46,7 @@
 
             if (metodo == 1) {
                 formularioHTML = `
-                <form action="Taller1U3.php" method="POST" class="mt-3">
+                <form action="conx.php" method="POST" class="mt-3">
                     <input type="hidden" name="metodo" id="metodo" value="1" />
                     <div class="mb-3">
                     <label for="nombre" class="form-label">nombre Salon</label>
@@ -66,29 +68,43 @@
                     <button type="submit" class="btn btn-success">Enviar</button>
                     </div>
                 </form>`;
-            } else if (metodo == 2) {
+            } 
+            else if (metodo == 2) {
+                formularioHTML = `
+               <form action="conx.php" method="POST" class="mt-3">
+               <input type="hidden" name="metodo" id="metodo" value="2" />
+               <div class="mb-3">
+                <label for="salon" class="form-label">Salon a buscar</label>
+                <input type="text" name="salon" id="salon" class="form-control" placeholder="Nombre salon" required />
+               </div>
+                <div class="d-grid gap-2 col-6 mx-auto">
+                <button type="submit" class="btn btn-success">Enviar</button>
+                </div>
+               </form>`;
+            }
+            else if (metodo == 3) {
                  formularioHTML = `
-                <form action="Taller1U3.php" method="POST" class="mt-3">
-                    <input type="hidden" name="metodo" id="metodo" value="1" />
+                <form action="conx.php" method="POST" class="mt-3">
+                    <input type="hidden" name="metodo" id="metodo" value="3" />
                     <div class="mb-3">
                     <label for="nombre" class="form-label">nombre Salon a modificar</label>
                     <input type="text" name="nombre" id="nombre" class="form-control" placeholder="Nombre" required />
                     </div>
                     <div class="mb-3">
                     <label for="nombreN" class="form-label">Nuevo nombre del salon</label>
-                    <input type="text" name="nombre" id="nombre" class="form-control" placeholder="Nombre Nuevo" required />
+                    <input type="text" name="nombreN" id="nombreN" class="form-control" placeholder="Nombre Nuevo"  />
                     </div>
                     <div class="mb-3">
                     <label for="capacidad" class="form-label">Capacidad maxima estudiantes</label>
-                    <input type="text" name="capacidad" id="capacidad" class="form-control" placeholder="Capacidad" required/>
+                    <input type="text" name="capacidad" id="capacidad" class="form-control" placeholder="Capacidad" />
                     </div>
                     <div class="mb-3">
                     <label for="Ubicacion" class="form-label">Ubicacion</label>
-                    <input type="text" name="ubicacion" id="ubicacion" class="form-control" placeholder="Ubicacion" required />
+                    <input type="text" name="ubicacion" id="ubicacion" class="form-control" placeholder="Ubicacion"  />
                     </div>
                     <div class="mb-3">
                     <label for="Tipo" class="form-label">Tipo de salon</label>
-                    <input type="text" name="tipo" id="tipo" class="form-control" placeholder="Tipo Salón" required/>
+                    <input type="text" name="tipo" id="tipo" class="form-control" placeholder="Tipo Salón" />
                     </div>
                     <div class="d-grid gap-2 col-6 mx-auto">
                     <button type="submit" class="btn btn-success">Enviar</button>
@@ -96,10 +112,10 @@
                     <b class="text-muted">NOTA: En caso de no querer modificar algún dato, puede dejar el campo en cuestión vacío.</b>
                     </div>
                 </form>`;
-            } else if (metodo == 3) {
+            } else if (metodo == 4) {
                 formularioHTML = `
-               <form action="Taller1U3.php" method="POST" class="mt-3">
-               <input type="hidden" name="metodo" id="metodo" value="3" />
+               <form action="conx.php" method="POST" class="mt-3">
+               <input type="hidden" name="metodo" id="metodo" value="4" />
                <div class="mb-3">
                 <label for="salon" class="form-label">Salon a borrar</label>
                 <input type="text" name="salon" id="salon" class="form-control" placeholder="Nombre salon" required />
@@ -109,7 +125,7 @@
                     </div>
                </form>`;
             }  else {
-                formularioHTML = '<p class="text-danger">Por favor, ingrese un método válido (1 a 3).</p>';
+                formularioHTML = '<p class="text-danger">Por favor, ingrese un método válido (1 a 4).</p>';
             }
 
             formularioDiv.innerHTML = formularioHTML;
