--- a/gest_salon/index.html
+++ b/gest_salon/index.html
@@ -46,7 +46,7 @@
 
             if (metodo == 1) {
                 formularioHTML = `
-                <form action="conx.php" method="POST" class="mt-3">
+                <form action="taller1U3.php" method="POST" class="mt-3">
                     <input type="hidden" name="metodo" id="metodo" value="1" />
                     <div class="mb-3">
                     <label for="nombre" class="form-label">nombre Salon</label>
@@ -71,7 +71,7 @@
             } 
             else if (metodo == 2) {
                 formularioHTML = `
-               <form action="conx.php" method="POST" class="mt-3">
+               <form action="taller1U3.php" method="POST" class="mt-3">
                <input type="hidden" name="metodo" id="metodo" value="2" />
                <div class="mb-3">
                 <label for="salon" class="form-label">Salon a buscar</label>
@@ -84,7 +84,7 @@
             }
             else if (metodo == 3) {
                  formularioHTML = `
-                <form action="conx.php" method="POST" class="mt-3">
+                <form action="taller1U3.php" method="POST" class="mt-3">
                     <input type="hidden" name="metodo" id="metodo" value="3" />
                     <div class="mb-3">
                     <label for="nombre" class="form-label">nombre Salon a modificar</label>
@@ -114,7 +114,7 @@
                 </form>`;
             } else if (metodo == 4) {
                 formularioHTML = `
-               <form action="conx.php" method="POST" class="mt-3">
+               <form action="taller1U3.php" method="POST" class="mt-3">
                <input type="hidden" name="metodo" id="metodo" value="4" />
                <div class="mb-3">
                 <label for="salon" class="form-label">Salon a borrar</label>
