crud-borrador yeimy

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="gest_docente/index.php">Gestionar docentes</a></li>
         <li><a href="gest_salon/index.html">Gestionar salones</a></li>
         <li><a href="gest_asignatura/index.php">Gestionar asignatura</a></li>
-        <li><a href="gest_programa/index.php">Gestionar programa académico</a></li>
+        <li><a href="gest_programa/index.html">Gestionar programa académico</a></li>
     </ul>
 
     <footer>Universidad Cooperativa de Colombia</footer>
