--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="gest_facultad/index.php">Gestionar facultades</a></li>
         <li><a href="gest_docente/index.php">Gestionar docentes</a></li>
         <li><a href="gest_salon/index.html">Gestionar salones</a></li>
-        <li><a href="gest_asignatura/index.php">Gestionar asignatura</a></li>
+        <li><a href="gest_asignatura/index.html">Gestionar asignatura</a></li>
         <li><a href="gest_programa/index.html">Gestionar programa académico</a></li>
     </ul>
 
